List of changes:
================
v0.3.0
- Add BVH player rewind node
- Further comments and minor improvements 

v0.2.0
- It is now possible to initialize Reference skeleton manually and 
  initialization with external BVH reference file is optional.
- Support all rotation orders and add missing XZY, YZX, ZYX rotations
- Better support for custom skeletons:
  Bone coordinate system can now be mapped in blueprint.
- Fix a synchronization bug when using Neuron format
- Further comments and minor improvements

v0.1.0
- Initial plugin version created.
  (Based and included in Third Person Perception Neuron (TM) Template v0.3.0)